# motu-mk5-linux

./: .gitignore  CHANGELOG.md  Cargo.toml  ERROR_HANDLING_PLAN.md  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  connection_issue.yml  feature_request.yml  no_audio.yml
debian/: postinst  postrm
install/alsa-card-profile/: motu-ultralite-mk5.conf
install/pipewire-pulse/: 50-motu-wine-routing.conf
install/systemd/: motu-mk5d.service  wireplumber-motu-mk5.conf
install/udev/: 89-motu-mk5.rules
install/wireplumber/: 51-motu-mk5.lua
pkg/: build-packages.sh
pkg/arch/: PKGBUILD
pkg/docker/: Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora
pkg/rpm/: motu-mk5.spec
src/: ctl.rs  daemon.rs  diagnostics.rs  lib.rs  updater.rs
src/audio/: discovery.rs  router.rs
src/device/: connection.rs  state.rs
src/protocol/: mod.rs  properties.rs  sysex.rs  types.rs
