[package]
name = "motu-mk5"
version = "0.1.0"
edition = "2024"
description = "Native Linux integration for the MOTU UltraLite mk5 audio interface"
license = "GPL-2.0-or-later"
repository = "https://github.com/thehighnotes/motu-mk5-linux"

[[bin]]
name = "motu-mk5d"
path = "src/daemon.rs"

[[bin]]
name = "motu-ctl"
path = "src/ctl.rs"

[dependencies]
midir = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
nix = { version = "0.29", features = ["signal"] }

[profile.release]
opt-level = 2
strip = true
