[package]
name = "motu-mk5"
version = "0.5.1"
edition = "2024"
description = "Native Linux integration for the MOTU UltraLite mk5 audio interface"
license = "GPL-2.0-or-later"
repository = "https://github.com/MarkWind85/motu-mk5-linux"

[[bin]]
name = "motu-mk5d"
path = "src/daemon.rs"

[[bin]]
name = "motu-ctl"
path = "src/ctl.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
nix = { version = "0.29", features = ["signal"] }
tungstenite = "0.26"
socket2 = "0.6.3"

[profile.release]
opt-level = 2
strip = true

[package.metadata.deb]
maintainer = "MarkWind85"
depends = "libasound2, pipewire, wireplumber"
section = "sound"
priority = "optional"
assets = [
    ["target/release/motu-mk5d", "usr/bin/", "755"],
    ["target/release/motu-ctl", "usr/bin/", "755"],
    ["install/alsa-card-profile/motu-ultralite-mk5.conf", "usr/share/alsa-card-profile/mixer/profile-sets/", "644"],
    ["install/udev/89-motu-mk5.rules", "etc/udev/rules.d/", "644"],
    ["install/wireplumber/51-motu-mk5.lua", "usr/share/wireplumber/main.lua.d/", "644"],
    ["install/systemd/motu-mk5d.service", "usr/lib/systemd/user/", "644"],
    ["install/systemd/wireplumber-motu-mk5.conf", "usr/share/motu-mk5/", "644"],
    ["install/pipewire-pulse/50-motu-wine-routing.conf", "usr/share/motu-mk5/", "644"],
    ["README.md", "usr/share/doc/motu-mk5/", "644"],
]
conf-files = [
    "/etc/udev/rules.d/89-motu-mk5.rules",
]
maintainer-scripts = "debian/"
